Mostly done with Week 3 seminar

--- a/weekly_seminars/Seminar_02-Software.ipynb
+++ b/weekly_seminars/Seminar_02-Software.ipynb
@@ -2,214 +2,250 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "584f7dc8",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "\n",
-    "\n",
-    "# Introduction to Computer Programming\n",
-    "\n",
-    "## Software\n",
-    "\n",
-    "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/full-colour-logo-UoB.png?raw=true\" width=\"20%\">\n",
-    "</p>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "205a7b9e",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Computer programming languages simplify the job of giving instructions to a computer. \n",
-    "\n",
-    "However, computers only understand numbers, so instructions written in a programming language must be translated to a form that a machine can understand. \n",
-    "\n",
-    "This is what **interpreters** and **compilers** do."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6192be6",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "An interpreter is a kind of program that executes other programs. \n",
-    "\n",
-    "When you write a Python program, the interpreter converts *source code* written in Python, to a form that can be understood and executed by the computer. \n",
-    "\n",
-    "The Python interpreter can be installed locally on your computer or accessed in the cloud, via a web browser. \n",
-    "\n",
-    "It is important to become familiar with the idea that there are multiple environments in which you can run Python - the only requirement is that the interpreter is installed. \n",
-    "\n",
-    "We will use a few of these environments during the course..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c066a784",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Google Colab (Colaboratory)\n",
-    "\n",
-    "A web browser based Python service \n",
-    "\n",
-    "Allows you to write and execute Python in your browser, alongside formatted text\n",
-    "\n",
-    "The contents of the videos and lectures will be shared as Google Colab notebooks (file extension .ipynb). \n",
-    "\n",
-    "A link to each notebook is given on the blackboard page. \n",
-    "\n",
-    "You can save any changes you make to your Google Drive <br>You will need a Google/Gmail account (free), please create one if you do not have one: https://support.google.com/mail/answer/56256?hl=en-GB\n",
-    "\n",
-    "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/colab_logo.png?raw=true\" width=\"20%\">\n",
-    "</p>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0897711",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# PyCharm \n",
-    "\n",
-    "An integrated development environment (IDE)\n",
-    "\n",
-    "An IDE is a software application that helps programmers develop code by combining capabilities:\n",
-    "- code editing\n",
-    "- debugging\n",
-    "- viewing outputs\n",
-    "\n",
-    "There are many different IDEs that all do a similar job (IDLE, Visual Studio, Sublime Text 3, Atom, Spyder). \n",
-    "\n",
-    "We will use PyCharm, an IDE widely used by students and professional developers. \n",
-    "\n",
-    "PyCharm has a number of accessibilty features https://www.jetbrains.com/help/pycharm/accessibility.html that can be used to set up the IDE to best support your learning.  \n",
-    "\n",
-    "\n",
-    "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/PyCharm.png?raw=true\" width=\"20%\">\n",
-    "</p>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2cbd2075",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# PyCharm on your personal computer\n",
-    "\n",
-    "PyCharm is available in the labs we will use to teach the course\n",
-    "\n",
-    "### If you want to install PyCharm on your own computer...\n",
-    "\n",
-    "There are two versions: Community (free) or Professional (free when you create an account with university email https://www.jetbrains.com/pycharm/buy/#discounts) \n",
-    "1. Install Python: https://www.python.org/downloads/\n",
-    "1. Install PyCharm: https://www.jetbrains.com/pycharm/download/#section=mac\n",
-    "1. Follow 'First steps' instructions: https://www.jetbrains.com/help/pycharm/creating-and-running-your-first-python-project.html \n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5cb79de",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Web-based code editors\n",
-    "Lastly, there are number of web-based code editors where you can write and run Python code from any computer with an internet connection. \n",
-    "\n",
-    "We will look at two examples..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "477cc5ba",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Python Anywhere \n",
-    "\n",
-    "1. Create a Beginnner Account (free) <br>https://www.pythonanywhere.com/pricing/\n",
-    "2. When you have created an account an logged in select 'Files' >> ('Browse files') then either:\n",
-    "    - Enter new file name e.g. hello.py \n",
-    "    - Choose from the list of files you have already created\n",
-    "    - Upload a file stored locally on your computer ('Upload a file')\n",
-    "3. When you have opened the file you want to edit\n",
-    "    - Type code in the editor window \n",
-    "    - Run code using the >>> Run button \n",
-    "    - Save your code online (512.0 MB storage space) \n",
-    "    - Download your code to store it locally"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "58af6f59",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Online Python\n",
-    "\n",
-    "- No setup/acount needed\n",
-    "- Type code in the editor window \n",
-    "- Upload a file stored locally on your computer with the 'Open File from Disk' button\n",
-    "- Run code using the > Run button  \n",
-    "- Download your code to store it locally using the 'Save File to Disk' button\n",
-    "\n",
-    "\n",
-    "https://www.online-python.com/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f31af5d",
+   "id": "0d67e7fb",
    "metadata": {},
    "source": [
-    "# On campus computer access\n",
+    "# Software development environments\n",
     "\n",
-    "A list of available spaces where you can access computers outside of timetabled activities can be found here: \n",
+    "There are lots of different ways to run Python code.  You have seen two already - running a notebook on Colab or writing a local file.  In this seminar, we will explore these options thoroughly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "305d9555",
+   "metadata": {},
+   "source": [
+    "## Your local Python\n",
     "\n",
-    "https://www.bristol.ac.uk/students/your-studies/libraries-study-spaces/study-spaces/more-spaces/"
+    "On whatever computer you're on, open up a command prompt or terminal\n",
+    "\n",
+    "- On Windows, press the Windows key and then type `command prompt`.  You should see an option.\n",
+    "- On Linux, you're looking for something called `Terminal`.  Sometimes Ctrl+Alt+T will open one for you.\n",
+    "- On Mac, search for `Terminal`.\n",
+    "\n",
+    "Then, regardless of your computer, type `python -V` (that's a capital V) and see what you get.\n",
+    "\n",
+    " 1. If you get something like `Python 3.10.11` or any other number beginning with 3, great.\n",
+    " 2. If you get a number beginning with 2, you're running a version of Python old enough to make a difference.  Try instead running `python3 -V`.\n",
+    "    - If that gets you to an output as in 1. above, you're fine, but use `python3` instead of `python` for the rest\n",
+    "    - If you get `not recognized` or a similar error, you need to install Python 3.\n",
+    " 3. If you get `not recognized`\n",
+    "    - If you think you have installed Python, try to find it and make sure the directory with the `python` executable is on your path.\n",
+    "    - Install Python using instructions from [https://www.python.org/downloads/](https://www.python.org/downloads/).  You should install the latest stable version, which is 3.12 at the time of writing.\n",
+    "\n",
+    "I wish I could give more help for this bit, but different computers and operating systems make this task very variable.  It's a common issue - there are lots of \"easy machine learning tutorial\" websites that start by assuming you have Python and a bunch of libraries installed, and that's rarely easy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eb84fc9",
+   "metadata": {},
+   "source": [
+    "Next up, once you have that sorted, just type `python` and then type in the following.  See what happens after each line.\n",
+    "\n",
+    "```Python\n",
+    "a = 3\n",
+    "print(a)\n",
+    "if a>2:\n",
+    "   print('big a')\n",
+    "\n",
+    "```\n",
+    "\n",
+    "You'll need to hit enter twice after the `print('big a')` line as the blank line shows it where the indented block ends.\n",
+    "\n",
+    "Hopefully you should see this code run as soon as you type each line.  It's not the friendliest but you can use this interactive approach as a quick way of checking syntax for a line or so, or doing a computation.\n",
+    "\n",
+    "Repeat what you just did by using the up arrow key to recall previous lines.  You can edit them before pressing enter - so try a different value of `a`.\n",
+    "\n",
+    "Type `exit()` to get out of Python and back to your command prompt - but keep the prompt open as we'll use it again in a minute."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d173ade8",
+   "metadata": {},
+   "source": [
+    "### Running Python scripts\n",
+    "\n",
+    "Make a file calle `hello.py` with the following contents.  Use Windows Notepad or Linux nano, or some similar text editor, just to prove you can.  It doesn't matter how you make the file.\n",
+    "\n",
+    "```Python\n",
+    "print('hello world')\n",
+    "```\n",
+    "\n",
+    "Now go to your command prompt/terminal again and type `python hello.py`.  Hopefully it'll print `hello world` for you.\n",
+    "\n",
+    "Here is your simplest way to run a whole program - just send it to the Python interpreter.  But sometimes we want to change settings or values so the same program can be re-used for different jobs.  Update your file as below:\n",
+    "\n",
+    "```Python\n",
+    "import sys\n",
+    "print('hello world')\n",
+    "print(sys.argv)\n",
+    "```\n",
+    "\n",
+    "Now run it again and try giving it some arguments, e.g. `python hello.py badgers` and see what comes out.  There will be more on this later, but hopefully you can start to see the route to developing whole applications in Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c114a16",
+   "metadata": {},
+   "source": [
+    "## Notebooks\n",
+    "\n",
+    "This document is written in the form of a Jupyter Notebook, typically `something.ipynb`.  These can mix:\n",
+    " - instructive text\n",
+    " - snippets or _cells_ of Python code that you can run one-by-one\n",
+    " \n",
+    "You can imagine that there is a Python interpreter running \"out the back\" (Jupyter calls it a _kernel_) and that when you run a cell, it's like typing that same code into the interpreter, as we did above.  Anything you can do in the interpreter, you can do in a notebook, e.g. read and write files, print, show graphics, etc.  \n",
+    "\n",
+    "Open this notebook (in Colab or locally, perhaps in Visual Studio Code).  Then try the cells below, running each in turn by using the little \"play\" button to one side, or by clicking in it and hitting Ctrl+Enter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e85cddec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# step 1\n",
+    "a = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0a5e991c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# step 2\n",
+    "twice_a = 2*a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d6db8b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is 4\n",
+      "twice_a is 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step 3\n",
+    "print('a is',a)\n",
+    "print('twice_a is',twice_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28ab17dc",
+   "metadata": {},
+   "source": [
+    "Lovely!  Key things to note is that variables are remembered from one cell to the next - each notebook has its own kernel with its own memory.\n",
+    "\n",
+    "Now, go back and edit \"step 1\" to read `a=4`.  Then run step 1 and step 3 *but not step 2*.  \n",
+    "```\n",
+    "a is 4\n",
+    "twice_a is 6\n",
+    "```\n",
+    "Eh? What's going on?\n",
+    "\n",
+    "I've seen this catch people out multiple times.  Maybe you're rushing to produce some results, and you want to skip a few sections of your code to save time because they haven't changed.  But if you skip the wrong bits, your results are wrong!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "716a7dd5",
+   "metadata": {},
+   "source": [
+    "## Scripts vs Notebooks\n",
+    "\n",
+    "Scripts are great for whole, finished programs.  You run them, perhaps with some settings, and they do everything they need to do.  But they do everything, every time (unless they break).\n",
+    "\n",
+    "Notebooks are great for developing, as you can develop a bit at a time, run only the bits you're working on, inspect the outputs easily, and then move on to the next cell when you're done.  It also leaves you with a nice \"trail\" of how you developed the work.\n",
+    "\n",
+    "Personally, I often find myself starting with a notebook and then copying the contents across to a `.py` script."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbe91d71",
+   "metadata": {},
+   "source": [
+    "## Beware the IDEs of...\n",
+    "\n",
+    "IDE stands for \"Integrated Development Environment\".  Examples include Visual Studio Code, Eclipse, Pycharm, Spyder and others.  Each typically combines:\n",
+    "- a text editor with development features like syntax highlighting and autocomplete\n",
+    "- some shortcuts for running and/or debugging code and/or notebooks\n",
+    "- countless options for customizing and extending itself\n",
+    "\n",
+    "Personally I have come to like Visual Studio Code for:\n",
+    "- hosting Jupyter Notebooks as well as editing scripts\n",
+    "- autocomplete\n",
+    "- integrated terminal window for quick experiments\n",
+    "- cross-platform availability, so life feels similar on Windows or Linux\n",
+    "\n",
+    "Having said all that, I never use the debugger."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b4e3f13",
+   "metadata": {},
+   "source": [
+    "### Notebooks are sort of an IDE\n",
+    "\n",
+    "Run the cell below..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3ac77dca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crazy_variable = 'yes'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e250bbe",
+   "metadata": {},
+   "source": [
+    "Now in the cell below, type `print(cr` and see what happens.  It should suggest the rest of the line for you.  Accept it by pressing the Tab key and then Enter.  I find this saves me a lot of typing."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "368a8a9b",
+   "id": "eb19cf78",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15cba9aa",
+   "metadata": {},
+   "source": [
+    "## Python in the cloud - Colab etc\n",
+    "\n",
+    "From a Python point of view, a Notebook on [Google Colab](https://colab.research.google.com/) is just another Notebook.  Instead of running on your local computer using the Python you installed, it runs on a Google server somewhere, and you see it through a web browser instead of something else.\n",
+    "\n",
+    "Advantages:\n",
+    "- They do the system admin, with Python all installed for you\n",
+    "- They actually do it really well"
+   ]
   }
  ],
  "metadata": {
@@ -229,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
