Seemed to have missed last saved notebook

--- a/weekly_seminars/Seminar_02-Software.ipynb
+++ b/weekly_seminars/Seminar_02-Software.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "e85cddec",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "0a5e991c",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "d6db8b9f",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "3ac77dca",
    "metadata": {},
    "outputs": [],
@@ -242,9 +242,14 @@
     "\n",
     "From a Python point of view, a Notebook on [Google Colab](https://colab.research.google.com/) is just another Notebook.  Instead of running on your local computer using the Python you installed, it runs on a Google server somewhere, and you see it through a web browser instead of something else.\n",
     "\n",
-    "Advantages:\n",
-    "- They do the system admin, with Python all installed for you\n",
-    "- They actually do it really well"
+    "The big advantages are that they've done lots of the set up for you, especially of common machine learning stuff.  Have a look at [this example](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_seminars/yolo_detect.ipynb).\n",
+    "\n",
+    "Observations:\n",
+    "- I really struggled to get any of this working on my local machines, because of dependency installation problems.  Google have it all set up nice.\n",
+    "- I know some people who have actually done all their model training on Colab using Google's GPUs.\n",
+    "- You can install extra Python libraries using `%pip` without messing up your own computer\n",
+    "- You can run Linux terminal commands using `!` (although there must be limits to this...)\n",
+    "- It's a bit of a pain to get your own data on to their server\n"
    ]
   }
  ],
