--- a/weekly_labs/Week_04_Loops/week_04_loops.ipynb
+++ b/weekly_labs/Week_04_Loops/week_04_loops.ipynb
@@ -170,6 +170,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Series example - approximating cosine\n",
+    "\n",
+    "Time to make a loop do some work - the example below approximates the cosine function by using its Taylor series\n",
+    "\n",
+    "$\\cos(\\theta) \\approx 1 - \\frac{\\theta^2}{2!} + \\frac{\\theta^4}{4!} - \\frac{\\theta^6}{6!} \\ldots$\n",
+    "\n",
+    "or in more general terms\n",
+    "\n",
+    "$\\cos(\\theta) \\approx \\sum_i (-1)^i \\frac{\\theta^{2i}}{(2i)!}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimate of cos theta is -0.029199522301293857\n",
+      "Checking against built-in value: -0.029199522301288815\n"
+     ]
+    }
+   ],
+   "source": [
+    "theta = 1.6 # change to different values (in radians)\n",
+    "\n",
+    "cos_theta = 0\n",
+    "for ii in range(10):\n",
+    "    # first calculate the 2i! factorial, noting the awkward 0!=1 case\n",
+    "    if ii==0:\n",
+    "        factorial = 1\n",
+    "    else:\n",
+    "        factorial = 1\n",
+    "        for jj in range(2*ii):\n",
+    "            factorial = factorial*(jj+1)\n",
+    "    cos_theta = cos_theta + ((-1)**ii)*(theta**(2*ii))/factorial\n",
+    "print('Estimate of cos theta is',cos_theta)\n",
+    "\n",
+    "from math import cos\n",
+    "print('Checking against built-in value:',cos(theta))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Fixed point iteration - solving Kepler's Equation with `for`\n",
     "\n",
     "If you're trying to rendezvous with a space station, it helps to know where it is, at any given time.  Sadly that's not straightforward, as it's governed by Kepler's equation:\n",
@@ -310,7 +358,7 @@
     " - Again the indent defines the stuff to iterate.\n",
     " - We always need something like an accummulator to keep track of progress.  Unlike `for`, `while` doesn't give us a free counter.\n",
     "\n",
-    " > Try changing the _less than_ to be _not equal to_ and see what happens.  Use the little button to the left if you need to interrupt the code."
+    " > Try changing the _less than_ to be _not equal to_ and see what happens.  Use the little square button to the left of the cell if you need to interrupt the code."
    ]
   },
   {
@@ -332,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -383,9 +431,7 @@
     "    if new_x**2>z:\n",
     "        upper_x = new_x\n",
     "    else:\n",
-    "        lower_x = new_x\n",
-    "\n",
-    "\n"
+    "        lower_x = new_x\n"
    ]
   }
  ],
@@ -405,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
