--- a/weekly_labs/Week_04_Loops/week_04_loops.ipynb
+++ b/weekly_labs/Week_04_Loops/week_04_loops.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,22 @@
     "    print('a is strictly positive')\n",
     "else:\n",
     "    print('a is negative or zero')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting started\n",
+    "\n",
+    "Either:\n",
+    "\n",
+    "- Click [this link](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_04_Loops/week_04_loops.ipynb) to open this notebook in Google colab.  You'll need to sign in with a Google account before you can run it.  When you do, hit `Ctrl+F9` to check it all runs.\n",
+    "\n",
+    "or\n",
+    "\n",
+    "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024` or just use `git pull` to refresh if you've done this already.\n",
+    "- Navigate to the subfolder `weekly_labs/Week_03_Flow/` and open the notebook `week_03_flow.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar."
    ]
   },
   {
@@ -68,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -178,12 +194,16 @@
     "\n",
     "or in more general terms\n",
     "\n",
-    "$\\cos(\\theta) \\approx \\sum_i (-1)^i \\frac{\\theta^{2i}}{(2i)!}$"
+    "$\\cos(\\theta) \\approx \\sum_i (-1)^i \\frac{\\theta^{2i}}{(2i)!}$\n",
+    "\n",
+    "The example below implements this series.\n",
+    "\n",
+    "> Play around with the number of iterations and see the effects."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +220,7 @@
     "\n",
     "cos_theta = 0\n",
     "for ii in range(10):\n",
-    "    # first calculate the 2i! factorial, noting the awkward 0!=1 case\n",
+    "    # first calculate the (2i)! factorial, noting the awkward 0!=1 case\n",
     "    if ii==0:\n",
     "        factorial = 1\n",
     "    else:\n",
@@ -218,76 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fixed point iteration - solving Kepler's Equation with `for`\n",
-    "\n",
-    "If you're trying to rendezvous with a space station, it helps to know where it is, at any given time.  Sadly that's not straightforward, as it's governed by Kepler's equation:\n",
-    "\n",
-    "$M = E - e sinE$\n",
-    "\n",
-    "$M = \\frac{2\\pi(t-t_0)}{T}$ is the _mean anomaly_ that takes time since lowest altitude and coverts it to an angle.  $E$ is the _eccentric anomaly_ that tells you where you actually are on the orbit ellipse... so you need to find $E$ given $M$.  But you can't re-arrange this to anything usable of the form $E=\\ldots$, so it needs solving numerically.\n",
-    "\n",
-    "Step forward _fixed point iteration_ which aims to find an $x$ such that $f(x)=x$ _i.e._ the fixed point of function $f$, where the \"output\" of $f$ is unchanged from its \"input\".  The algorithm is:\n",
-    "1. Guess an $x$\n",
-    "2. Calculate $f(x)$\n",
-    "3. Set $x$ equal to $f(x)$.\n",
-    "4. Repeat from 2.\n",
-    "Think about it: if it ever converges such that $x$ stops changing, you have found a fixed point.\n",
-    "\n",
-    "Here we'll use a `for` loop to iterate for a fixed number of times.\n",
-    "\n",
-    "> Re-arrange Kepler's equation into the form $E = f(E)$ and implement it over `???` in the code below.  Does it converge?  Does it work?\n",
-    "\n",
-    "> Play with the number of iterations - what is the effect?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 0 value of E 1.54\n",
-      "Iteration 1 value of E 1.54\n",
-      "Iteration 2 value of E 1.54\n",
-      "Iteration 3 value of E 1.54\n",
-      "Iteration 4 value of E 1.54\n",
-      "Iteration 5 value of E 1.54\n",
-      "Iteration 6 value of E 1.54\n",
-      "Iteration 7 value of E 1.54\n",
-      "Iteration 8 value of E 1.54\n",
-      "Iteration 9 value of E 1.54\n",
-      "Iteration 10 value of E 1.54\n",
-      "Iteration 11 value of E 1.54\n",
-      "Iteration 12 value of E 1.54\n",
-      "Iteration 13 value of E 1.54\n",
-      "Iteration 14 value of E 1.54\n",
-      "Iteration 15 value of E 1.54\n",
-      "Iteration 16 value of E 1.54\n",
-      "Iteration 17 value of E 1.54\n",
-      "Iteration 18 value of E 1.54\n",
-      "Iteration 19 value of E 1.54\n",
-      "M is 1.54\n",
-      "E - e sin E is 1.2401422508183564\n"
-     ]
-    }
-   ],
-   "source": [
-    "from math import sin\n",
-    "\n",
-    "M = 1.54\n",
-    "e = 0.3\n",
-    "\n",
-    "# guess\n",
-    "E = M\n",
-    "\n",
-    "for ii in range(20): # change from 10 to 1000\n",
-    "    '???'\n",
-    "    print('Iteration',ii,'value of E',E)\n",
-    "print('M is',M)\n",
-    "print('E - e sin E is', E - e*sin(E))"
+    "Note you can nest `if`, `else` and `for` inside each other.  Here we have an `if` statement inside the outer `for` loop to catch the weird $0!=1$ case and then an inner `for` loop inside the `else` clause to calculate the other factorials."
    ]
   },
   {
@@ -312,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -432,6 +383,230 @@
     "        upper_x = new_x\n",
     "    else:\n",
     "        lower_x = new_x\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using `break` to have multiple stopping conditions\n",
+    "\n",
+    "Recall the discussion earlier about searching for something that might not be there.  To combat this, many practical algorithm implementations have a mixture of stopping conditions: either you find what you're looking for, or you give up after an upper limit on iterations.\n",
+    "\n",
+    "The `break` statement will immediately stop and jump out of any loop.  A typical arrangement is shown below, using a `for` loop to implement a fixed number of iterations, but including an early termination option through `break` if you find what you want.  \n",
+    "\n",
+    "In the example below, we use a simple 1-D _steepest descent_ optimizer to search for the minimizing point of a function $f(x) = x^2 + 5$.  The algorithm in words is:\n",
+    "1. Compute gradient $\\nabla f = \\frac{df}{dx}$\n",
+    "2. If gradient is sufficiently small, stop\n",
+    "2. Evaluate new trial value $x' = x - \\alpha \\nabla f$ where $\\alpha$ is a step length parameter\n",
+    "3. Evaluate trial objective $f(x')$\n",
+    "4. If objective improved _i.e._ $f(x')<f(x)$ then accept the new value $x'$, otherwise reject it and reduce step length $\\alpha$ by half. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0 \tx is -30.0 \tf(x) is 905.0 \tgradient is -60.0 \t step length is 3\n",
+      "Iteration 1 \tx is -30.0 \tf(x) is 905.0 \tgradient is -60.0 \t step length is 1.5\n",
+      "Iteration 2 \tx is -30.0 \tf(x) is 905.0 \tgradient is -60.0 \t step length is 0.75\n",
+      "Iteration 3 \tx is 15.0 \tf(x) is 230.0 \tgradient is 30.0 \t step length is 0.75\n",
+      "Iteration 4 \tx is -7.5 \tf(x) is 61.25 \tgradient is -15.0 \t step length is 0.75\n",
+      "Iteration 5 \tx is 3.75 \tf(x) is 19.0625 \tgradient is 7.5 \t step length is 0.75\n",
+      "Iteration 6 \tx is -1.875 \tf(x) is 8.515625 \tgradient is -3.75 \t step length is 0.75\n",
+      "Iteration 7 \tx is 0.9375 \tf(x) is 5.87890625 \tgradient is 1.875 \t step length is 0.75\n",
+      "Iteration 8 \tx is -0.46875 \tf(x) is 5.2197265625 \tgradient is -0.9375 \t step length is 0.75\n",
+      "Iteration 9 \tx is 0.234375 \tf(x) is 5.054931640625 \tgradient is 0.46875 \t step length is 0.75\n",
+      "Iteration 10 \tx is -0.1171875 \tf(x) is 5.01373291015625 \tgradient is -0.234375 \t step length is 0.75\n",
+      "Iteration 11 \tx is 0.05859375 \tf(x) is 5.0034332275390625 \tgradient is 0.1171875 \t step length is 0.75\n",
+      "Iteration 12 \tx is -0.029296875 \tf(x) is 5.000858306884766 \tgradient is -0.05859375 \t step length is 0.75\n",
+      "Iteration 13 \tx is 0.0146484375 \tf(x) is 5.000214576721191 \tgradient is 0.029296875 \t step length is 0.75\n",
+      "Iteration 14 \tx is -0.00732421875 \tf(x) is 5.000053644180298 \tgradient is -0.0146484375 \t step length is 0.75\n",
+      "Iteration 15 \tx is 0.003662109375 \tf(x) is 5.0000134110450745 \tgradient is 0.00732421875 \t step length is 0.75\n",
+      "Iteration 16 \tx is -0.0018310546875 \tf(x) is 5.000003352761269 \tgradient is -0.003662109375 \t step length is 0.75\n",
+      "Iteration 17 \tx is 0.00091552734375 \tf(x) is 5.000000838190317 \tgradient is 0.0018310546875 \t step length is 0.75\n",
+      "Iteration 18 \tx is -0.000457763671875 \tf(x) is 5.000000209547579 \tgradient is -0.00091552734375 \t step length is 0.75\n",
+      "Stopping\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = -30.0\n",
+    "f_x = x**2 + 5.0\n",
+    "\n",
+    "step_length = 3\n",
+    "stop_tol = 0.001\n",
+    "\n",
+    "for ii in range(100):\n",
+    "    grad_x = 2*x\n",
+    "    print('Iteration',ii,'\\tx is',x,'\\tf(x) is',f_x,'\\tgradient is',grad_x,'\\t step length is',step_length)\n",
+    "    if grad_x < stop_tol and grad_x > -stop_tol:\n",
+    "        print('Stopping')\n",
+    "        break\n",
+    "    new_x = x - step_length*grad_x\n",
+    "    new_f = new_x**2 + 5.0\n",
+    "    if new_f < f_x:\n",
+    "        x = new_x\n",
+    "        f_x = new_f\n",
+    "    else:\n",
+    "        step_length = 0.5*step_length\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Portfolio assignment - solving Kepler's Equation with `for`\n",
+    "\n",
+    "If you're trying to rendezvous with a space station, it helps to know where it is, at any given time.  Sadly that's not straightforward, as it's governed by Kepler's equation:\n",
+    "\n",
+    "$M = E - e sinE$\n",
+    "\n",
+    "$M = \\frac{2\\pi(t-t_0)}{T}$ is the _mean anomaly_ that takes time since lowest altitude and coverts it to an angle.  $E$ is the _eccentric anomaly_ that tells you where you actually are on the orbit ellipse... so you need to find $E$ given $M$.  But you can't re-arrange this to anything usable of the form $E=\\ldots$, so it needs solving numerically.\n",
+    "\n",
+    "Step forward _fixed point iteration_ which aims to find an $x$ such that $f(x)=x$ _i.e._ the fixed point of function $f$, where the \"output\" of $f$ is unchanged from its \"input\".  The algorithm is:\n",
+    "1. Guess an $x$\n",
+    "2. Calculate $f(x)$\n",
+    "3. Set $x$ equal to $f(x)$.\n",
+    "4. Repeat from 2.\n",
+    "Think about it: if it ever converges such that $x$ stops changing, you have found a fixed point.\n",
+    "\n",
+    "Here we'll use a `for` loop to iterate for a fixed number of times.\n",
+    "\n",
+    "> Re-arrange Kepler's equation into the form $E = f(E)$ and implement it over `???` in the code below.  Also implement the loop with sufficient iterations to converge to within 0.01% of the mean anomaly. \n",
+    "\n",
+    "> Optional extra: implement an early stopping criterion for the tolerance and test with multiple values of $M$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean anomaly M is 1.54\n",
+      "Eccentricity e is 0.3\n",
+      "Iteration ? value of E 1.54\n",
+      "Iteration ? value of E 1.54\n",
+      "Iteration ? value of E 1.54\n",
+      "Eccentric anomaly E is 1.54\n",
+      "E - e sin E is 1.2401422508183564\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sin\n",
+    "\n",
+    "M = 1.54\n",
+    "e = 0.3\n",
+    "print('Mean anomaly M is',M)\n",
+    "print('Eccentricity e is',e)\n",
+    "\n",
+    "# guess\n",
+    "E = M\n",
+    "\n",
+    "for ii in '???':\n",
+    "    '???'\n",
+    "    print('Iteration',ii,'value of E',E)\n",
+    "print('Eccentric anomaly E is',E)\n",
+    "print('E - e sin E is', E - e*sin(E))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test and submit\n",
+    "\n",
+    "Before submitting, download the following two files to Colab (or save from github if you're working locally).  One is a template for your `kepler.py` to be submitted and the other is a test script."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !wget https://raw.githubusercontent.com/engmaths/SEMT10002_2024/refs/heads/main/weekly_labs/Week_04_Loops/kepler.py\n",
+    "    !wget https://raw.githubusercontent.com/engmaths/SEMT10002_2024/refs/heads/main/weekly_labs/Week_04_Loops/test_kepler.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Either use a terminal or the cell below to run your `kepler.py` and make sure it runs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean anomaly M is 1.54\n",
+      "Eccentricity e is 0.3\n",
+      "Eccentric anomaly E is 1.54\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run kepler.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And use the following to test it.  If you don't get any errors, and you try it for some different numbers, you're all set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Python script kepler.py\n",
+      "Script ran OK\n",
+      "Got mean anomaly 1.54 from line Mean anomaly M is 1.54\n",
+      "Got eccentricity 0.3 from line Eccentricity e is 0.3\n",
+      "Got eccentric anomaly 1.54 from line Eccentric anomaly E is 1.54\n",
+      "Got all the data we needed\n",
+      "M is 1.54\n",
+      "E - e sin(E) is 1.2401422508183564\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Equation not close enough: error is -0.29985774918164365",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[1;32m~\\LocalDocuments\\SEMT10002_2024\\weekly_labs\\Week_04_Loops\\test_kepler.py:82\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mM is\u001b[39m\u001b[38;5;124m'\u001b[39m,mean_anomaly)\n\u001b[0;32m     81\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mE - e sin(E) is\u001b[39m\u001b[38;5;124m'\u001b[39m, ecc_anomaly \u001b[38;5;241m-\u001b[39m eccentricity\u001b[38;5;241m*\u001b[39msin(ecc_anomaly))\n\u001b[1;32m---> 82\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m kepler_err\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m<\u001b[39m (\u001b[38;5;241m1e-4\u001b[39m\u001b[38;5;241m*\u001b[39mmean_anomaly)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEquation not close enough: error is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkepler_err\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     84\u001b[0m \u001b[38;5;66;03m# everything OK if we got to here\u001b[39;00m\n\u001b[0;32m     85\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTest passed: equation solved to sufficient tolerance\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Equation not close enough: error is -0.29985774918164365"
+     ]
+    }
+   ],
+   "source": [
+    "%run test_kepler.py kepler.py"
    ]
   }
  ],
